# distributed-financial-backtesting-engine

configs/: jobs_large.csv
final/: CMakeLists.txt  Makefile  README.md
final/configs/: jobs_small.csv
final/scripts/: run_all_evaluations.sh  run_cluster.sh  run_scalability_evaluation.sh
final/src/: evaluation_client.cpp  main_raft_controller.cpp
final/src/common/: message.cpp  message.h
final/src/controller/: controller.cpp  raft_controller.cpp  raft_controller.h
final/src/data/: csv_loader.cpp  csv_loader.h
final/src/raft/: raft_log.h  raft_messages.h  raft_node.h
final/src/strategy/: sma_strategy.cpp  strategy.h  strategy_with_checkpoint.cpp
final/src/worker/: checkpoint_manager.cpp  checkpoint_manager.h
final/tests/: test_raft.cpp  test_sma_strategy.cpp
scripts/: generate_sample_data.py  run_failover_evaluation.sh  run_raft_cluster.sh  run_worker_recovery_evaluation.sh
src/: benchmark_client.cpp  main_controller.cpp  main_worker.cpp  submit_jobs.cpp
src/common/: logger.cpp  logger.h
src/controller/: controller.h
src/raft/: raft_log.cpp  raft_node.cpp
src/strategy/: sma_strategy.h  strategy_with_checkpoint.h
src/worker/: worker.cpp  worker.h
tests/: test_checkpoint.cpp  test_csv_loader.cpp  test_full_system.cpp  test_integration.cpp  test_raft_integration.cpp
